--- a/JS_avanzado/02_Async/package.json
+++ b/JS_avanzado/02_Async/package.json
@@ -5,12 +5,14 @@
   "main": "async.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "nodemon start"
+    "start": "nodemon start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19"
-  }
+  },
+  "type": "module"
 }
